# Tape

./: .gitignore  Cargo.toml
src/: main.rs
src/cmd/: actions.rs  args.rs  cli.rs  commands.rs  mod.rs
src/constants/: mod.rs
src/enums/: imdb.rs  mod.rs
src/models/: config.rs  imdb.rs  mod.rs
src/utils/: config.rs  io.rs  log.rs  mod.rs  string.rs
