[package]
name = "tape"
version = "0.2.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
colored = "2.1.0"
config = "0.14.1"
dialoguer = "0.11.0"
dirs = "5.0.1"
fern = { version = "0.7.0", features = ["colored"] }
log = "0.4.22"
serde = "1.0.214"
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ['full'] }
toml = "0.8.19"
